--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.image.*?>
 
 <BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.focusbuddy.controllers.LoginController">
    <center>
@@ -14,7 +15,7 @@
             <Region styleClass="login-container" />
 
             <!-- Main Content -->
-            <VBox fx:id="loginContainer" alignment="CENTER" maxWidth="450.0" spacing="30.0">
+            <VBox fx:id="loginContainer" alignment="CENTER" maxWidth="500.0" spacing="30.0">
                <children>
                   <!-- Header Section -->
                   <VBox alignment="CENTER" spacing="15.0">
@@ -23,11 +24,12 @@
                         <StackPane>
                            <children>
                               <Circle radius="35.0" styleClass="logo-circle-2" />
-                              <Label styleClass="logo-emoji" text="🎯">
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Label>
+                              <!-- ✅ UPDATED: Logo Image instead of emoji -->
+                              <ImageView fitHeight="32.0" fitWidth="32.0" preserveRatio="true" styleClass="app-logo">
+                                 <image>
+                                    <Image url="@../images/icon.png" />
+                                 </image>
+                              </ImageView>
                            </children>
                         </StackPane>
 
@@ -99,20 +101,21 @@
                                  </font>
                               </Button>
 
-                              <HBox alignment="CENTER" spacing="10.0">
+                              <!-- Fixed: Better layout for register section -->
+                              <VBox alignment="CENTER" spacing="8.0">
                                  <children>
-                                    <Label styleClass="field-label" text="Don't have an account?">
+                                    <Label styleClass="field-label" text="Don't have an account?" wrapText="true">
                                        <font>
                                           <Font size="12.0" />
                                        </font>
                                     </Label>
-                                    <Button fx:id="registerButton" styleClass="secondary-button" text="Create Account">
+                                    <Button fx:id="registerButton" styleClass="secondary-button" text="Create Account" minWidth="150.0" prefWidth="200.0">
                                        <font>
                                           <Font size="12.0" />
                                        </font>
                                     </Button>
                                  </children>
-                              </HBox>
+                              </VBox>
                            </children>
                         </VBox>
                      </children>
